tests/dev_and_build/errors/js_syntax_error/_js_syntax_error_dev.test.mjs/0_chromium/.jsenv/chrome@139.00/main.js
import "/js_syntax_error.js";

//# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbImZpbGU6Ly8vVXNlcnMvZG1haWwvRG9jdW1lbnRzL2Rldi9qc2Vudi9jb3JlL3Rlc3RzL2Rldl9hbmRfYnVpbGQvZXJyb3JzL2pzX3N5bnRheF9lcnJvci9jbGllbnQvbWFpbi5qcyJdLCJzb3VyY2VzQ29udGVudCI6WyJpbXBvcnQgXCIuL2pzX3N5bnRheF9lcnJvci5qc1wiO1xuIl0sIm5hbWVzIjpbXSwibWFwcGluZ3MiOiJBQUFBLENBQUMsQ0FBQyxDQUFDLENBQUMsQ0FBQyxDQUFDLENBQUMscUJBQXNCOyJ9
